--- a/Flights/.classpath
+++ b/Flights/.classpath
@@ -16,12 +16,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/lela0/OneDrive/Documents/mssql-jdbc-9.2.0.jre8 (5).jar">
+	<classpathentry kind="lib" path="/Users/aarons/Desktop/mssql-jdbc-9.2.0.jre8 (5).jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/lela0/OneDrive/Documents/mysql-connector-java-8.0.18.jar">
+	<classpathentry kind="lib" path="/Users/aarons/Desktop/mysql-connector-j-8.0.31.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
